--- a/frameworks/django/project1/core/templates/index.html
+++ b/frameworks/django/project1/core/templates/index.html
@@ -12,34 +12,39 @@
 </head>
 
 <body>
-    <h1>Página INDEX</h1>
+    <center>
 
-    <img src="{% static 'images/django_img.png' %}" alt="Imagem Django">
+        <h1>Página INDEX</h1>
 
-    <h2>{{ texto }}</h2>
-    <h2>{{ outro_texto }}</h2>
-    <span>{{ logado }}</span>
-    <span>{{ logado }}</span>
-    <table>
-        <thead>
-            <tr>
-                <th>Produto</th>
-                <th>Preço</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for produto in produtos %}
-            <tr>
-                <td><a href="{% url 'vw_produto' produto.id %}">{{ produto.nome }}</a></td>
-                <td>{{ produto.preco }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
+        <img src="{% static 'images/django_img.png' %}" alt="Imagem Django">
 
-    </table>
+        <h2>{{ texto }}</h2>
+        <h2>{{ outro_texto }}</h2>
+        <span>{{ logado }}</span>
+        <span>{{ logado }}</span>
+        <table>
+            <thead>
+                <tr>
+                    <th>Produto</th>
+                    <th>Preço</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produto in produtos %}
+                <tr>
+                    <td><a href="{% url 'vw_produto' produto.id %}">{{ produto.nome }}</a></td>
+                    <td>{{ produto.preco }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
 
-    <button onclick="teste();">Clique-me</button>
-    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+        </table>
+
+        <button onclick="teste();">Clique-me</button>
+        <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+
+    </center>
+
 </body>
 
 </html>
