Adicionando novas views e criando superuser 'frameworks\django\my\project1'

--- a/frameworks/django/my/project1/core/templates/index.html
+++ b/frameworks/django/my/project1/core/templates/index.html
@@ -9,7 +9,15 @@
     <title>Home</title>
 </head>
 <h1>{{ titulo }}</h1>
-    
+    {% for produto in produtos %}
+        {{ produto.id }}
+        {{ produto.nome }}
+        {{ produto.preco }}
+        {{ produto.criado }}
+        {{ produto.modificado }}
+        {{ produto.ativo }}
+        <br>
+    {% endfor %}
 <body>
 
 </body>
