--- a/frameworks/django/my/project1/core/templates/index.html
+++ b/frameworks/django/my/project1/core/templates/index.html
@@ -2,15 +2,32 @@
 {% load static %}
 
 {% block title %}{{ titulo }}{% endblock title %}
+{% block link %}
+    <link rel="stylesheet" href="{% static 'index.css'%}">
+{% endblock link %}
+
 {% block cabecalho %}{{ titulo }}{% endblock cabecalho %}
 {% block content %}
-    {% for produto in produtos %}
-        {{ produto.id }}
-        {{ produto.nome }}
-        {{ produto.preco }}
-        {{ produto.criado }}
-        {{ produto.modificado }}
-        {{ produto.ativo }}
-        <br>
-    {% endfor %}
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Produto</th>
+            <th>PREÇO</th>
+            <th>CRIADO</th>
+            <th>MODIFICADO</th>
+            <th>ATIVO</th>
+        </tr>
+        {% for produto in produtos %}
+            <tr>
+                <td>{{ produto.id }}</td>
+                <td>{{ produto.nome }}</td>
+                <td>{{ produto.preco }}</td>
+                <td>{{ produto.criado }}</td>
+                <td>{{ produto.modificado }}</td>
+                <td>{{ produto.ativo }}</td>
+            </tr>
+        {% endfor %}
+
+
+    </table>
 {% endblock content %}
