Adicionando as funcionalidade de visualizar e editar no projeto 'frameworks\django\my\project1'

--- a/frameworks/django/my/project1/core/templates/detalhe_produto.html
+++ b/frameworks/django/my/project1/core/templates/detalhe_produto.html
@@ -5,10 +5,11 @@
 
 {% block cabecalho %}{{ titulo }}{% endblock cabecalho %}
 {% block content %}
-    <form method='post'>
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type='submit'>Salvar</button>
-    </form>
+    {{ produto.id }}
+    {{ produto.nome }}
+    {{ produto.preco }}
+    {{ produto.criado }}
+    {{ produto.modificado }}
+    {{ produto.ativo }}
 
 {% endblock content %}
