--- a/frameworks/django/my/project1/core/templates/index.html
+++ b/frameworks/django/my/project1/core/templates/index.html
@@ -3,13 +3,14 @@
 
 {% block title %}{{ titulo }}{% endblock title %}
 {% block link %}
-    <link rel="stylesheet" href="{% static 'index.css'%}">
+    <link rel="stylesheet" href="{% static 'css/index.css'%}">
 {% endblock link %}
 
 {% block cabecalho %}{{ titulo }}{% endblock cabecalho %}
 {% block content %}
+<div class="tabela">
     <table>
-        <tr>
+        <tr class="borda-grossa">
             <th>ID</th>
             <th>Produto</th>
             <th>PREÇO</th>
@@ -18,21 +19,24 @@
             <th>ATIVO</th>
             <th>VIZUALIZAR</th>
             <th>EDITAR</th>
-
+            
         </tr>
         {% for produto in produtos %}
-            <tr>
-                <td>{{ produto.id }}</td>
-                <td>{{ produto.nome }}</td>
-                <td>{{ produto.preco }}</td>
-                <td>{{ produto.criado }}</td>
-                <td>{{ produto.modificado }}</td>
+        <tr class="borda-fina">
+            <td>{{ produto.id }}</td>
+            <td>{{ produto.nome }}</td>
+            <td>{{ produto.preco }}</td>
+            <td>{{ produto.criado }}</td>
+            <td>{{ produto.modificado }}</td>
                 <td>{{ produto.ativo }}</td>
                 <td><a href="{% url 'det_produto' produto.id %}">👁️</a></td>
                 <td><a href="{% url 'edit_produto' produto.id %}">🖋️</a></td>
             </tr>
-        {% endfor %}
+            {% endfor %}
+            
+            
+        </table>
+</div>
 
-
-    </table>
-{% endblock content %}
+        {% endblock content %}
+        
