--- a/frameworks/django/my/project1/core/templates/base.html
+++ b/frameworks/django/my/project1/core/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="head">
+<div class="cabecalho">
     <header>
         <h1>{% block cabecalho %}Cabeçalho{% endblock cabecalho %}</h1>
         <nav>
@@ -33,9 +33,11 @@
         {% endblock %}
     </div>
 
+<div class = "rodape">
     <footer>
-        <p>&copy; Site</p>
+        <p>&copy; Site criado para testes</p>
     </footer>
+</div>
 
 </body>
 </html>
