--- a/frameworks/django/my/project1/core/static/css/index.css
+++ b/frameworks/django/my/project1/core/static/css/index.css
@@ -1,4 +1,4 @@
-.tabela {
+/* .tabela {
     display: flex;
     justify-content: center;
 }
@@ -17,4 +17,34 @@ tr.borda-grossa {
 }
 tr.borda-fina {
     border-bottom: 1px solid black;
+} */
+
+
+.tabela {
+    background-color: #f4f4f4;
+    border-radius: 5px;
+}
+
+.galeria-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.produto-card {
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 15px;
+    padding: 15px;
+    width: 250px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.2s ease;
+}
+
+.produto-card:hover {
+    transform: scale(1.05);
 }
