--- a/frameworks/django/my/project1/core/templates/index.html
+++ b/frameworks/django/my/project1/core/templates/index.html
@@ -9,7 +9,7 @@
 {% block cabecalho %}{{ titulo }}{% endblock cabecalho %}
 {% block content %}
 <div class="tabela">
-    <table>
+    {% comment %} <table>
         <tr class="borda-grossa">
             <th>ID</th>
             <th>Produto</th>
@@ -33,9 +33,23 @@
                 <td><a href="{% url 'edit_produto' produto.id %}">🖋️</a></td>
             </tr>
             {% endfor %}
-            
-            
-        </table>
+        </table> {% endcomment %}
+
+        <div class="galeria-container">
+            {% for produto in produtos %}
+                <div class='produto-card'>
+                    {{ produto.id }}
+                    {{ produto.nome }}
+                    {{ produto.preco }}
+                    <a href="{% url 'det_produto' produto.id %}">👁️</a>
+                    <a href="{% url 'edit_produto' produto.id %}">🖋️</a>
+
+                </div>
+
+            {% empty %}
+            <p>Sem produtos no momento.</p>
+            {% endfor%}
+        </div>
 </div>
 
         {% endblock content %}
