--- a/frameworks/django/my/project1/core/templates/base.html
+++ b/frameworks/django/my/project1/core/templates/base.html
@@ -14,12 +14,18 @@
 <div class="cabecalho">
     <header>
         <h1>{% block cabecalho %}Cabeçalho{% endblock cabecalho %}</h1>
-        <nav>
-            <ul>
-                {% comment %} class="{% if request.path == 'index' %}active{% endif %}" será usado para validar se está na tela e irá deixar a nav com uma cor diferente quando selecionado {% endcomment %}
+        <nav class="navegacao">
+            <ul class="menu">
                 <li class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}"><a href="{% url 'index' %}">Home</a></li>
-                <li class="{% if request.resolver_match.url_name == 'cadastrar' %}active{% endif %}"><a href="{% url 'cadastrar' %}">Cadastro</a></li>
+                <li class="dropdown">
+                    <a href="#">Produtos</a>
+                    <ul class="submenu">
+                        <li class="{% if request.resolver_match.url_name == 'list_prod' %}active{% endif %}"><a href="{% url 'list_prod' %}">Listar</a></li>
+                        <li class="{% if request.resolver_match.url_name == 'cadastrar' %}active{% endif %}"><a href="{% url 'cadastrar' %}">Cadastrar</a></li>
+                    </ul>
+                </li>
                 <li  class="{% if request.resolver_match.url_name == 'admin:index' %}active{% endif %}"><a href="{% url 'admin:index' %}">Administração</a></li>
+                {% comment %} class="{% if request.path == 'index' %}active{% endif %}" será usado para validar se está na tela e irá deixar a nav com uma cor diferente quando selecionado {% endcomment %}
                 {% comment %} Outra solução para tornar o link absoluto e não relativo: {% endcomment %}
                 {% comment %} <li><a href="/admin/">Administração</a></li> {% endcomment %}
             </ul>
