--- a/frameworks/django/my/project1/core/templates/listar_produtos.html
+++ b/frameworks/django/my/project1/core/templates/listar_produtos.html
@@ -8,8 +8,9 @@
 
 {% block cabecalho %}{{ titulo }}{% endblock cabecalho %}
 {% block content %}
+{% comment %}
 <div class="tabela">
-    {% comment %} <table>
+    <table>
         <tr class="borda-grossa">
             <th>ID</th>
             <th>Produto</th>
@@ -33,25 +34,27 @@
                 <td><a href="{% url 'edit_produto' produto.id %}">🖋️</a></td>
             </tr>
             {% endfor %}
-        </table> {% endcomment %}
+        </table>
+</div>
+ {% endcomment %}
+ <div class="galeria">
 
-        <div class="galeria-container">
-            {% for produto in produtos %}
-                <div class='produto-card'>
-                    <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }}" class="gal-produto-imagem">
-                    <p class="card id"> {{ produto.id }}</p>
-                    <h3 class="card nome">{{ produto.nome }}</h3>
-                    <p class="card preco">{{ produto.preco }}</p>
-                    <a href="{% url 'det_produto' produto.id %}">👁️</a>
-                    <a href="{% url 'edit_produto' produto.id %}">🖋️</a>
-
+     <div class="galeria-container">
+         {% for produto in produtos %}
+         <a href="{% url 'det_produto' produto.id %}" class="card-link">
+             <div class='produto-card'>
+                 <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }}" class="gal-produto-imagem">
+                 <p class="card id"> {{ produto.id }}</p>
+                 <h3 class="card nome">{{ produto.nome }}</h3>
+                 <p class="card preco">{{ produto.preco }}</p>
+                 <a href="{% url 'edit_produto' produto.id %}">🖋️</a>
                 </div>
-
+            </a>
             {% empty %}
             <p>Sem produtos no momento.</p>
             {% endfor%}
         </div>
 </div>
-
+        
         {% endblock content %}
         
